# indexed

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  build.sh  indexed-plan.md
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake  patch_re2.cmake
docs/adr/: 0001-use-re2-for-regex.md  0002-directory-walk-scanning-strategy.md  0003-binary-index-format.md  0004-fetchcontent-dependency-management.md  0005-qt-drag-and-drop.md  0006-pool-based-index-layout.md  0007-fanotify-vs-inotify-monitoring.md  0008-privileged-helper-and-elevation.md
packaging/: indexed.desktop
packaging/appimage/: build-appimage.sh
packaging/metainfo/: org.indexed.indexed.metainfo.xml
packaging/polkit/: org.indexed.helper.policy
scripts/: run-tests.sh
src/core/: CMakeLists.txt  Version.cpp  Version.h
src/core/indexer/: FanotifyMonitor.cpp  FanotifyMonitor.h  IChangeMonitor.h  IFileSystemScanner.h  Indexer.cpp  Indexer.h  InotifyWatcher.cpp  InotifyWatcher.h  StatusFile.cpp  StatusFile.h  WalkScanner.cpp  WalkScanner.h
src/core/platform/: Elevation.cpp  Elevation.h  MountEnumerator.cpp  MountEnumerator.h
src/core/search/: ISearchEngine.h  SearchEngine.cpp  SearchEngine.h  SimdSearch.cpp  SimdSearch.h  SimdSearchAvx2.cpp  SimdSearchSse42.cpp  TokenMatcher.cpp  TokenMatcher.h
src/core/settings/: IniFile.cpp  IniFile.h  Logger.cpp  Logger.h  PathUtils.cpp  PathUtils.h  Settings.cpp  Settings.h
src/core/storage/: Crc32.cpp  Crc32.h  EntryMeta.h  IIndexStore.h  IndexPool.cpp  IndexPool.h  IndexSerializer.cpp  IndexSerializer.h  IndexStore.cpp  IndexStore.h
src/helper/: CMakeLists.txt  main_helper.cpp
src/ui/: CMakeLists.txt  DisplayEntry.cpp  DisplayEntry.h  DisplayFormat.cpp  DisplayFormat.h  FirstRunDialog.cpp  FirstRunDialog.h  MainWindow.cpp  MainWindow.h  ResultModel.cpp  ResultModel.h  ResultView.cpp  ResultView.h  SearchCoordinator.cpp  SearchCoordinator.h  SearchLineEdit.cpp  SearchLineEdit.h  SettingsDialog.cpp  SettingsDialog.h  StatusText.cpp  StatusText.h  main.cpp
tests/: CMakeLists.txt  test_DisplayEntry.cpp  test_DisplayFormat.cpp  test_Elevation.cpp  test_FanotifyMonitor.cpp  test_FirstRunDialog.cpp  test_IndexPool.cpp  test_IndexSerializer.cpp  test_IndexStore.cpp  test_Indexer.cpp  test_IniFile.cpp  test_InotifyWatcher.cpp  test_MountEnumerator.cpp  test_PathUtils.cpp  test_ResultModel.cpp  test_ResultView.cpp  test_Scaffold.cpp  test_SearchCoordinator.cpp  test_SearchEngine.cpp  test_SearchLineEdit.cpp  test_Settings.cpp  test_SettingsDialog.cpp  test_SimdSearch.cpp  test_StatusFile.cpp  test_StatusText.cpp  test_TokenMatcher.cpp  test_WalkScanner.cpp
tests/mocks/: MockChangeMonitor.h  MockFileSystemScanner.h  MockIndexStore.h
